# odoo-mcp-staff

./: .gitignore  README.md  pyproject.toml
odoo_mcp_staff/: odoo_client.py  server.py
